--- a/documentationbasic/ocp4devex/src/main/asciidoc/introductiontooc.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/introductiontooc.asciidoc
@@ -84,3 +84,18 @@ image::ocintro4.png[Full definition of Pod]
 
 Every object can be described using JSON or YAML - this command returns, from the Server, the exact definition of that object. This is incredibly useful when we get to editing the objects via oc.
 
+=== Adding some Applications
+
+We are going to take advantage of some of the OpenShift's opinionated developer features with the next part. Rather than manually create all the objects we would need for an Application from scratch on OpenShift, which would include a BuildConfig, which describes how to build the Image that will contain our Application, a Build, which is the actual task that executes the BuildConfig, in a Pod, to generate out Application Image, a Service, which is the IP endpoint for the Application within the OpenShift Cluster and an ImageStream, which is a wrapper around the created Image. 
+
+We can shortcut this as developers, if we have, for example, a GitHub repo with existing code. Type the following:
+
+[source]
+----
+oc new-app https://github.com/utherp0/meow2
+----
+
+The oc command will cause OpenShift to create all the contents it needs for an Application based on the source code it finds at the GitHub repo. In this case the source code contains the building blocks for a node.js application. The image belows shows the output you should receive:
+
+image:ocintro5.png[Result of new-app]
+
