--- a/setup/service-mesh-setup-notes.asciidoc
+++ b/setup/service-mesh-setup-notes.asciidoc
@@ -52,4 +52,4 @@ for i in {1..99}; do oc login --username user$i --password openshift; done
 
 oc login --username opentlc-mgr --password ***REMOVED***
 
-for i in {1..99}; do oc add-role-to-user -n istio-system --role-namespace istio-system mesh-user user$i; done
+for i in {1..99}; do oc policy add-role-to-user -n istio-system --role-namespace istio-system mesh-user user$i; done
