update to doc locations

--- a/documentationbasic/ocp4devex/src/main/asciidoc/codereadyworkspaces.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/codereadyworkspaces.asciidoc
@@ -4,11 +4,11 @@ Author: Mark Roberts (feedback to mroberts@redhat.com)
 
 === Introduction
 
-This workshop module will introduce you to the development model of using a browser and a containerised development environment known as CodeReady Workspaces.
+This workshop module will introduce you to the development model of using a browser and a containerized development environment known as CodeReady Workspaces.
 
 CodeReady workspaces are a novel way of delivering a complete development environment to a developer in a consistent and repeatable manner. The configuration of the environment and the work that is done within it are stored within the workspace providing a high level of security. The workspace allows developers to switch from (say) working at an office on a desktop computer to working from home without having to copy assets from client to client to maintain a consistent working experience.
 
-Workspaces may be created from a defintion file that allows team leaders to create shared configuration files that ensure that the team has a consistent set of plugins, configuration settings and access to project source code. 
+Workspaces may be created from a definition file that allows team leaders to create shared configuration files that ensure that the team has a consistent set of plugins, configuration settings and access to project source code. 
 
 Workspaces may be shared between different developers. This allows a user in one location who has a development issue to get help from a co-worker who can interact with the first users environment. This is particularly significant with the prevalence of working from home from early 2020.
 
